Refactored `api/logout` documentation to fit legacy
- Finished `200` annotation to show the same result as the legacy OpenAPI spec.
- Changed tag from `Pages` to `API`
- Added `HTTPResponse` to model the JSON object to be returned. I need to refactor this out when this and #103 are merged, so the same concept isn't called `AuthResponse`, `HTTPResponse` and `ErrorWithMessageAndStatusCode`.
- Renamed copy-pasted `searchResultsJSON` to `logoutJSON`.
- Changed error to reflect we're logging out, not fetching search results.
- Added `@Failure` annotation to reflect the potential for errors when marshalling a response to write to the user.
